test/scopes/reject/fail9.rift
let
  type List = Nil | Cons(i64, List)

  fn length(l: List): i64 =
    match l with
      | Nil => 0
      | Cons(x, xs) => 1 + length(y)
in
end

